--- a/journal/2014-07-12_thresholding_connectivity.Rmd
+++ b/journal/2014-07-12_thresholding_connectivity.Rmd
@@ -158,6 +158,8 @@ system.time(bts1 <- boot.ts.tseries(ts, nperms, type="block"))
 system.time(bts2 <- boot.ts.tseries(ts, nperms, type="stationary"))
 system.time(bts3 <- boot.ts.meboot(ts, nperms))
 system.time(bts4 <- boot.ts.wmtsa(ts, nperms))
+
+# system.time(bts5 <- zboots.circularblock(ts, nperms))
 ```
 
 ### Compute Statistic (aka Bootstrapped Correlations)
@@ -165,10 +167,10 @@ system.time(bts4 <- boot.ts.wmtsa(ts, nperms))
 We now compute correlations for the original and permuted data. The result is a matrix of connections x permutations.
 
 ```{r}
-cor.perms <- function(bts) {
+cor.perms <- function(bts, fun=cor) {
   nperms  <- dim(bts)[3]
   bcors   <- aaply(bts, 3, function(x) {
-    upper(cor(x))
+    upper(fun(x))
   }, .progress="text")
   bcors   <- t(bcors) # conns x perms
   return(bcors)
@@ -180,6 +182,19 @@ system.time(bcors1 <- cor.perms(bts1))
 system.time(bcors2 <- cor.perms(bts2))
 system.time(bcors3 <- cor.perms(bts3))
 system.time(bcors4 <- cor.perms(bts4))
+
+# system.time(bcors5 <- cor.perms(bts4))
+
+# gls <- glasso_cv(ts) # get lambda
+# gfun <- function(x) -cov2cor(glasso(cov(x), gls$rhomax, trace=0)$wi) # should i convert?
+# system.time(bcors5g <- cor.perms(bts4, gfun))
+
+# 
+# lwfun <- function(x) -cov2cor(ginv(var.shrink.eqcor(x)))
+# system.time(bcors5lw <- cor.perms(bts4, lwfun))
+
+# ccfun <- function(x) -cov2cor(invcov.shrink(x, verbose=F))
+# system.time(bcors5cc <- cor.perms(bts4, ccfun))
 ```
 
 ### Compute Significance
@@ -197,6 +212,11 @@ system.time(bsigs1 <- sig.perms(bcors1))
 system.time(bsigs2 <- sig.perms(bcors2))
 system.time(bsigs3 <- sig.perms(bcors3))
 system.time(bsigs4 <- sig.perms(bcors4))
+
+# system.time(bsigs5 <- sig.perms(bcors5))
+# system.time(bsigs5g <- sig.perms(bcors5g))
+# system.time(bsigs5lw <- sig.perms(bcors5lw))
+# system.time(bsigs5cc <- sig.perms(bcors5cc))
 ```
 
 Sometimes it's easier when those p-values are represented as z-scores.
@@ -206,6 +226,8 @@ bzvals1 <- p2z(bsigs1)
 bzvals2 <- p2z(bsigs2)
 bzvals3 <- p2z(bsigs3)
 bzvals4 <- p2z(bsigs4)
+
+# bzvals5 <- p2z(bsigs5)
 ```
 
 ```{r}
@@ -215,6 +237,10 @@ table(emp=bsigs1<0.01, real=vnet!=0)
 table(emp=bsigs2<0.01, real=vnet!=0)
 table(emp=bsigs3<0.01, real=vnet!=0)
 table(emp=bsigs4<0.05, real=vnet!=0)
+# table(emp=bsigs5<0.05, real=vnet!=0)
+# round(prop.table(table(emp=bsigs5g<0.05, real=vnet!=0), 2), 3)
+# round(prop.table(table(emp=bsigs5lw<0.05, real=vnet!=0), 2), 3)
+# round(prop.table(table(emp=bsigs5cc<0.05, real=vnet!=0), 2), 3)
 
 table(emp=nsigs1, real=vnet!=0)
 table(emp=nsigs2, real=vnet!=0)
@@ -224,5 +250,8 @@ tmp2 <- fdrtool(bsigs2, statistic="pvalue", plot=F)
 tmp3 <- fdrtool(bsigs3, statistic="pvalue", plot=F)
 tmp4 <- fdrtool(bsigs4, statistic="pvalue", plot=F)
 tmp5 <- fdrtool(cvec, statistic="correlation", plot=F)
+
+fdrv <- fdrtool(bsigs5, statistic="pvalue", plot=F, verbose=F)
+round(prop.table(table(fdrv$qval<.05, real=vnet!=0), 2), 2)
 
 ```
